--- a/ejercicioherencia.html
+++ b/ejercicioherencia.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
     <style> 
-        @media all and (min-width: 600px){
+        @media all and (max-width: 600px){
             h2 {background-color: forestgreen;
             }
-            li {
+            ul {
                 background-color: gold;
             }
+        }
         
     html {background-color:deepskyblue;}
-    body {font-size: 14px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: brown; line-height:2.5px;}
+    body {font-size: 14px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: brown; line-height:1.5;}
     <head>
         <title>
             ESRIIIII
