--- a/ejerciciocajas.html
+++ b/ejerciciocajas.html
@@ -30,11 +30,24 @@
             <h1>
                 Main heading here
             </h1>
-            <p>
-                gjhfjdsghlfhjhjdlfhdldlfdgkhjfgdfhgdflkhfdlfjhfkghfhjfjhfjhfjhjfhkfhjfkhjfhkjfhkjhk
-                khfdlhkhlklkfhdlklkhkhldkhkhkhldkhlkhdlhkdlhkldhkdhlhklhkldkghlkhldkhlkhldhkdlhkdlhk
-
+            <div class="container">
+            <div class="cajamarilla">
+                <p>
+                  gjhfjdsghlfhjhjdlfhdldlfdgkhjfgdfhgdflkhfdlfffffffffffffffffffffffffffffffffffffffffffffjh
+                  khfdlhkhlklkfhdlklkhkhldkhkhkhldkhlkhdlhkdlhkldhkdhlhklhkldkghlkhldkhlkhldhkdlhkdlhkgjhfjdsghlfhjhjdlfhdldlfdgkhjfgdfhgdflkhfdlfffffffffffffffffffffffffffffffffffffffffffffjh
+                  khfdlhkhlklkfhdlklkhkhldkhkhkhldkhlkhdlhkdlhkldhkdhlhklhkldkghlkhldkhlkhldhkdlhkdlhkgjhfjdsghlfhjhjdlfhdldlfdgkhjfgdfhgdflkhfdlfffffffffffffffffffffffffffffffffffffffffffffjh
+                  khfdlhkhlklkfhdlklkhkhldkhkhkhldkhlkhdlhkdlhkldhkdhlhklhkldkghlkhldkhlkhldhkdlhkdlhkgjhfjdsghlfhjhjdlfhdldlfdgkhjfgdfhgdflkhfdlfffffffffffffffffffffffffffffffffffffffffffffjh
+                  khfdlhkhlklkfhdlklkhkhldkhkhkhldkhlkhdlhkdlhkldhkdhlhklhkldkghlkhldkhlkhldhkdlhkdlhkgjhfjdsghlfhjhjdlfhdldlfdgkhjfgdfhgdflkhfdlfffffffffffffffffffffffffffffffffffffffffffffjh
+                  khfdlhkhlklkfhdlklkhkhldkhkhkhldkhlkhdlhkdlhkldhkdhlhklhkldkghlkhldkhlkhldhkdlhkdlhk
+                
             </p>
+            </div>
+            <div class="image">
+                <img src="https://subiendoimagen.infojardin.com/subir/images/5ee01230d020b.jpg">
+
+            </div>
+            </div>
+            
             <div class="caja3">
                 <h3>
                     Related info
